--- a/generators/react/templates/index.html
+++ b/generators/react/templates/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <script src='http://cdn.bootcss.com/react/15.4.2/react.min.js'></script>
+<script src="http://cdn.bootcss.com/react/15.5.4/react-dom.min.js"></script>
 </head>
 
 <body>
@@ -8,6 +9,6 @@
 
 </div>
 
-<script src="./build/index.js"></script>    
+<script src="/assets/index.js"></script>    
 </body>
 </html>
